--- a/Cookbook/Views/Login/Index.cshtml
+++ b/Cookbook/Views/Login/Index.cshtml
@@ -10,8 +10,9 @@
 <h2 class="page-header">@Index.PageHeader</h2>
 
 
-@using (Html.BeginForm("Login", "Login"))
+@using (Html.BeginForm("Index", "Login"))
 {
+    @Html.HiddenFor(x => x.ReturnUrl)
     <div class="row form-group">
         @Html.LabelFor(x => x.Email, new { @class = "control-label col-sm-2" })
         @Html.TextBoxFor(x => x.Email, new { @class = "form-control col-sm-10" })
